Fixed header shadow, z-index issues.

--- a/Fuyuki.Client/src/components/Peekaboo/Peekaboo.scss
+++ b/Fuyuki.Client/src/components/Peekaboo/Peekaboo.scss
@@ -7,6 +7,6 @@
     z-index: 1000;
     left: 0;
     width: calc(100% - 10px);
-    padding: 0 5px;
+    padding: 5px;
   }
 }
